Fixed z-index issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11815,7 +11815,6 @@ input.form-control.newsletter-email {
 .wrapper-header {
   overflow: visible !important;
 }
-.home-slider,
 .sticky-nav-wrapper {
   z-index: -1;
 }
