--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2471,7 +2471,7 @@ input.form-control.newsletter-email {
     overflow: visible !important;
 }
 
-.home-slider, .sticky-nav-wrapper {
+.sticky-nav-wrapper {
 	z-index: -1;
 }
 
